--- a/css/main.css
+++ b/css/main.css
@@ -3,5 +3,6 @@
 @import url(./header.css);
 @import url(./banner.css);
 @import url(./films.css);
-@import url(./trailer.css)
+@import url(./trailer.css);
+@import url(./series.css);
 
